--- a/_sass/_cv.scss
+++ b/_sass/_cv.scss
@@ -81,12 +81,28 @@ div.container-links {
  * CV MAP styles
  *****************************/
 
-div.container-pdf {
+// div.container-pdf {
+//   display: flex;
+//   flex-direction: row;
+//   flex-wrap: wrap;
+//   align-items: center;
+//   justify-content: flex-start;
+// }
+
+/* Modify the container-pdf class */
+.container-pdf {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between; /* Aligns items to the left and right */
+  align-items: center; /* Vertically aligns the content */
+}
+
+/* Apply styles for the image (portrait) */
+.container-pdf image {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;  /* Makes the image round */
+  object-fit: cover;   /* Ensures the image fits well */
+  margin-left: 20px;   /* Adds space between text and image */
 }
 
 /*****************************
