--- a/_includes/resume/basics.liquid
+++ b/_includes/resume/basics.liquid
@@ -2,27 +2,35 @@
   {% assign skip_basics = 'image,profiles,location' | split: ',' %}
   {% for content in data[1] %}
     {%
-      if (content[1] == "") or (skip_basics contains
-      content[0])
+      if (content[1] == "") or (skip_basics contains content[0])
     %}
       {% continue %}
     {% endif %}
 
     <tr>
-      <td class="p-1 pr-2 font-weight-bold">
-        <b>{{ content[0] | capitalize }}</b>
-      </td>
-      <td class="p-1 pl-2 font-weight-light text">
-        {% if content[0] == 'url' %}
-          <a href="{{ content[1] }}" target="_blank" rel="noopener noreferrer">{{ content[1] }}</a>
-        {% elsif content[0] == 'email' %}
-          <a href="mailto:{{ content[1] }}" target="_blank">{{ content[1] }}</a>
-        {% elsif content[0] == 'phone' %}
-          <a href="tel:{{ content[1] }}">{{ content[1] }}</a>
-        {% else %}
-          {{ content[1] }}
-        {% endif %}
-      </td>
+      {% if content[0] != 'image' %}
+        <td class="p-1 pr-2 font-weight-bold" style="width: 70%;">
+          <b>{{ content[0] | capitalize }}</b>
+        </td>
+        <td class="p-1 pl-2 font-weight-light text" style="width: 30%;">
+          {% if content[0] == 'url' %}
+            <a href="{{ content[1] }}" target="_blank" rel="noopener noreferrer">{{ content[1] }}</a>
+          {% elsif content[0] == 'email' %}
+            <a href="mailto:{{ content[1] }}" target="_blank">{{ content[1] }}</a>
+          {% elsif content[0] == 'phone' %}
+            <a href="tel:{{ content[1] }}">{{ content[1] }}</a>
+          {% else %}
+            {{ content[1] }}
+          {% endif %}
+        </td>
+      {% else %}
+        <!-- Portrait image row (this will only show if 'image' is in the data) -->
+        <td colspan="2" class="text-center">
+          {% if content[1] %}
+            <img src="{{ content[1] }}" alt="Portrait" >
+          {% endif %}
+        </td>
+      {% endif %}
     </tr>
   {% endfor %}
 </table>
