--- a/_includes/resume/basics.liquid
+++ b/_includes/resume/basics.liquid
@@ -9,10 +9,10 @@
 
     <tr>
       {% if content[0] != 'image' %}
-        <td class="p-1 pr-2 font-weight-bold" style="width: 70%;">
+        <td class="p-1 pr-2 font-weight-bold"">
           <b>{{ content[0] | capitalize }}</b>
         </td>
-        <td class="p-1 pl-2 font-weight-light text" style="width: 30%;">
+        <td class="p-1 pl-2 font-weight-light text"">
           {% if content[0] == 'url' %}
             <a href="{{ content[1] }}" target="_blank" rel="noopener noreferrer">{{ content[1] }}</a>
           {% elsif content[0] == 'email' %}
