--- a/_includes/resume/basics.liquid
+++ b/_includes/resume/basics.liquid
@@ -9,7 +9,7 @@
 
     <tr>
       {% if content[0] != 'image' %}
-        <td class="p-1 pr-2 font-weight-bold"">
+        <td class="p-1 pr-2 font-weight-bold">
           <b>{{ content[0] | capitalize }}</b>
         </td>
         <td class="p-1 pl-2 font-weight-light text">
